--- a/www/css/login.css
+++ b/www/css/login.css
@@ -9,48 +9,48 @@
 }
 
 .login-page {
-width: 360px;
-padding: 8% 0 0;
-margin: auto;
+    width: 360px;
+    padding: 8% 0 0;
+    margin: auto;
 }
 .form {
-position: relative;
-z-index: 1;
-background: #FFFFFF;
-max-width: 360px;
-margin: 0 auto;
-padding: 45px;
-text-align: center;
-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    position: relative;
+    z-index: 1;
+    background: #FFFFFF;
+    max-width: 360px;
+    margin: 0 auto;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-font-family: "Roboto", sans-serif;
-outline: 0;
-background: #f2f2f2;
-width: 100%;
-border: 0;
-margin: 0 0 15px;
-padding: 15px;
-box-sizing: border-box;
-font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
 }
-.form button {
-font-family: "Roboto", sans-serif;
-text-transform: uppercase;
-outline: 0;
-background: #457b9d;
-width: 100%;
-border: 0;
-padding: 15px;
-color: #FFFFFF;
-font-size: 14px;
--webkit-transition: all 0.3 ease;
-transition: all 0.3 ease;
-cursor: pointer;
+.form button.login {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #457b9d;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
-background: #3E6F8E;
-cursor: pointer;
+.form button.login:hover,.form button.login:active,.form button.login:focus {
+    background: #3E6F8E;
+    cursor: pointer;
 }
 .form .message {
 margin: 15px 0 0;
@@ -99,4 +99,9 @@ color: #EF3B3A;
 }
 body {
 background: #83c5be;
+}
+
+.alert-dismissible .btn-close {
+    bottom: 0;
+    margin: auto 0;
 }
