--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 .imagen{
     height: 100px;
-    background-image: url('Isotipo.png');
+    background-image: url('wabece_logo.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     width: 180px;
