--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 .imagen{
     height: 100px;
-    background-image: url('Isotipo.png');
+    background-image: url('wabece_logo.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     width: 180px;
